--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-react": "^3.1.0",
+        "@vitejs/plugin-react": "^2.0.0",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
-        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.56.1"
+        "sass": "^1.56.1",
+        "vite": "^3.0.2",
+        "laravel-vite-plugin": "^0.6.0"
     },
     "dependencies": {
         "@babel/preset-react": "^7.18.6",
