--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
-        "@vitejs/plugin-react": "^2.0.0",
+        "@vitejs/plugin-react": "^3.1.0",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
         "lodash": "^4.17.19",
@@ -15,11 +15,12 @@
         "react-dom": "^18.2.0",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
-        "vite": "^3.0.2",
-        "laravel-vite-plugin": "^0.6.0"
+        "laravel-vite-plugin": "^0.7.4",
+        "vite": "^4.1.1"
     },
     "dependencies": {
         "@babel/preset-react": "^7.18.6",
+        "@vitejs/plugin-react-refresh": "^1.3.6",
         "sass-loader": "^13.2.0"
     }
 }
