--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
         "@vitejs/plugin-react": "^3.1.0",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
+        "laravel-vite-plugin": "^0.7.4",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom":"^6.8.1" ,
+        "react-router-dom": "^6.8.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
-        "laravel-vite-plugin": "^0.7.4",
         "vite": "^4.1.1"
     },
     "dependencies": {
         "@babel/preset-react": "^7.18.6",
         "@vitejs/plugin-react-refresh": "^1.3.6",
+        "easy-peasy": "^5.2.0",
         "sass-loader": "^13.2.0"
     }
 }
