--- a/.gitattributes
+++ b/.gitattributes
@@ -6,6 +6,7 @@
 *.md diff=markdown
 *.php diff=php
 *.js linguist-vendored
+/public/css/app.css linguist-vendored
 /.github export-ignore
 CHANGELOG.md export-ignore
 .styleci.yml export-ignore
