--- a/package.json
+++ b/package.json
@@ -21,8 +21,13 @@
     },
     "dependencies": {
         "@babel/preset-react": "^7.18.6",
+        "@fortawesome/fontawesome-svg-core": "^6.3.0",
+        "@fortawesome/free-solid-svg-icons": "^6.3.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "easy-peasy": "^5.2.0",
+        "jquery": "^3.6.3",
+        "popper.js": "^1.16.1",
         "sass-loader": "^13.2.0"
     }
 }
