--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
         environment:
             MYSQL_ROOT_PASSWORD: root
             MYSQL_DATABASE: teddy
+        ports:
+            - "3306:3306"
     node:
         image: node:18.14-alpine
         working_dir: /app
