Setup ts linter

--- a/package.json
+++ b/package.json
@@ -3,21 +3,36 @@
     "scripts": {
         "dev": "vite",
         "dev-docker": "vite --host",
+        "lint": "eslint ./resources/js/**/*.{ts,tsx} --ext .ts,.tsx",
         "build": "vite build"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "@typescript-eslint/eslint-plugin": "^5.54.0",
+        "@typescript-eslint/parser": "^5.54.0",
         "@vitejs/plugin-react": "^3.1.0",
         "axios": "^1.1.2",
         "bootstrap": "^5.2.3",
+        "eslint": "^8.35.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-config-standard-with-typescript": "^34.0.0",
+        "eslint-import-resolver-typescript": "^3.5.3",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "laravel-vite-plugin": "^0.7.4",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "prettier": "^2.8.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.1",
         "resolve-url-loader": "^5.0.0",
         "sass": "^1.56.1",
+        "typescript": "^4.9.5",
         "vite": "^4.1.1"
     },
     "dependencies": {
