--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
         "allowJs": false,
         "allowSyntheticDefaultImports": true,
         "composite": false,
+        "declaration": true,
+        "declarationMap": true,
         "forceConsistentCasingInFileNames": true,
         "moduleResolution": "Node",
         "newLine": "lf",
@@ -23,7 +25,7 @@
         "noPropertyAccessFromIndexSignature": false,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "strict": true,
+        "strict": false,
         "useDefineForClassFields": true
     },
     "include": [
