--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "goksi/teddyconsole",
+    "name": "goksi/tabbyconsole",
     "type": "project",
     "description": "Minecraft remote managing console for spigot servers",
     "keywords": [
