--- a/docker/webserver/apache.conf
+++ b/docker/webserver/apache.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName teddy.test
+  ServerName tabby.test
   DocumentRoot "/var/www/html/public"
 
   AllowEncodedSlashes On
