--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@fortawesome/free-solid-svg-icons": "^6.3.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@vitejs/plugin-react-refresh": "^1.3.6",
+        "boring-avatars": "^1.7.0",
         "easy-peasy": "^5.2.0",
         "jquery": "^3.6.3",
         "popper.js": "^1.16.1",
