--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
     "jsxSingleQuote": false,
     "bracketSpacing": true,
     "arrowParens": "avoid",
-    "endOfLine": "lf"
+    "endOfLine": "lf",
+    "printWidth": 100
 }
