--- a/docker/webserver/apache.conf
+++ b/docker/webserver/apache.conf
@@ -1,5 +1,13 @@
 <VirtualHost *:80>
   ServerName tabby.test
+
+  RewriteEngine On
+  RewriteCond %{HTTPS} !=on
+  RewriteRule ^/?(.*) https://%{SERVER_NAME}/$1 [R,L]
+</VirtualHost>
+
+<VirtualHost *:443>
+  ServerName tabby.test
   DocumentRoot "/var/www/html/public"
 
   AllowEncodedSlashes On
@@ -8,7 +16,11 @@
   php_value post_max_size 100M
 
   <Directory "/var/www/html/public">
-    AllowOverride all
     Require all granted
+    AllowOverride all
   </Directory>
+
+  SSLEngine on
+  SSLCertificateFile /var/www/certs/tabby.test.crt
+  SSLCertificateKeyFile /var/www/certs/tabby.test.key
 </VirtualHost>
