--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
+        "@types/bootstrap": "^5.2.6",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "@typescript-eslint/eslint-plugin": "^5.54.0",
